# fastLBP

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  example.py  membench.py  pyproject.toml  setup.py
scripts/: bench.py
src/: _lbp.c  _lbp.pyx  lbp.c  lbp.pyx  new_lbp.pyx
src/fastlbp-imbg/: fastlbp.py  skimage_lbp.pyx  test.py
src/fastlbp_imbg/: __init__.py  common.py  dask_test.ipynb  example.py  fastlbp.py  lbp.py  playground.ipynb  setup.py  skimage_lbp.c  skimage_lbp.pyx  test_lbp.py  test_lbp_impl.py  utils.py  workers.py
src/fastlbp_imbg/tests/: test_lbp_impl.py  test_lbp_mask.py  test_utils.py
tests/: test_fastlbp.py  test_lbp_impl.py  test_lbp_mask.py  test_utils.py
